...
): List<TypedLine> = buildList {
    add(
        typed(
            CodeLine(
                buildAnnotatedString {
                    withStyle(SpanStyle(color = syntax.comment)) { append("$ ") }
                    withStyle(SpanStyle(color = syntax.string)) { append("tsteps init") }
                }
            )
        )
    )
    add(blank())
    add(printed(comment(intro, syntax)))
...
